// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getImageMeta > generates page preview image Meta 1`] = `
{
  "og": {
    "image": {
      "": "http://xyo.network/preview/1200/630/img.png",
      "height": 630,
      "secure_url": "http://xyo.network/preview/1200/630/img.png",
      "type": "image/png",
      "url": "http://xyo.network/preview/1200/630/img.png",
      "width": 1200,
    },
  },
  "twitter": {
    "card": "summary_large_image",
    "image": {
      "": "http://xyo.network/preview/1200/630/img.png",
    },
  },
}
`;

exports[`getImageMeta > generates page preview image Meta 2`] = `
{
  "og": {
    "image": {
      "": "https://beta.foreventory.com/web3/nfts/wallet/0xacdaEEb57ff6886fC8e203B9Dd4C2b241DF89b7a/score/e1b5b2a04069019a2ed2eb14e983b1dfaff96769a98c84fb9502d89615e07398/preview/1200/630/img.png?chainId=1",
      "height": 630,
      "secure_url": "https://beta.foreventory.com/web3/nfts/wallet/0xacdaEEb57ff6886fC8e203B9Dd4C2b241DF89b7a/score/e1b5b2a04069019a2ed2eb14e983b1dfaff96769a98c84fb9502d89615e07398/preview/1200/630/img.png?chainId=1",
      "type": "image/png",
      "url": "https://beta.foreventory.com/web3/nfts/wallet/0xacdaEEb57ff6886fC8e203B9Dd4C2b241DF89b7a/score/e1b5b2a04069019a2ed2eb14e983b1dfaff96769a98c84fb9502d89615e07398/preview/1200/630/img.png?chainId=1",
      "width": 1200,
    },
  },
  "twitter": {
    "card": "summary_large_image",
    "image": {
      "": "https://beta.foreventory.com/web3/nfts/wallet/0xacdaEEb57ff6886fC8e203B9Dd4C2b241DF89b7a/score/e1b5b2a04069019a2ed2eb14e983b1dfaff96769a98c84fb9502d89615e07398/preview/1200/630/img.png?chainId=1",
    },
  },
}
`;
